data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_291.wast
;; Test 2: Use `nop` within the loop and a `br_if` that skips the `nop` conditionally based on a dynamic condition. Check if the loop executes correctly without getting stuck.

(assert_malformed
  (module
    (func
      (loop
        (block
          (br_if 1 (i32.const 0))
          (nop)
          (br 0)
        )
      )
    )
  )
  "type mismatch"
)